vercre-vci/src/snapshots/vercre_vci__batch__tests__ad-state.snap
---
source: vercre-vci/src/batch.rs
assertion_line: 617
expression: state
---
credential_issuer: "http://credibil.io"
expires_at: "[expires_at]"
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
token:
  access_token: ABCDEF
  token_type: Bearer
  c_nonce: "[c_nonce]"
  c_nonce_expires_at: "[c_nonce_expires_at]"
