vercre-vci/src/snapshots/vercre_vci__batch__tests__ci-state.snap
---
source: vercre-vci/src/batch.rs
assertion_line: 517
expression: state
---
expires_at: "[expires_at]"
credential_issuer: "http://credibil.io"
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
token:
  access_token: ABCDEF
  token_type: Bearer
  c_nonce: "[c_nonce]"
  c_nonce_expires_at: "[c_nonce_expires_at]"
